<resources>
    <string name="app_name">Simple_animations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simple_transition">Simple transition</string>
    <string name="button">button</string>
    <string name="text">text</string>
    <string name="click_here">click here</string>
    <string name="explode_transition">explode transition</string>
    <string name="crop_photo">crop photo</string>
    <string name="trajectory_move">trajectory move</string>
    <string name="object_animator">object animator</string>
    <string name="option_first">option 1</string>
    <string name="option_second">option 2</string>
    <string name="state_list_animator">state list animator</string>
    <string name="text_state_list_animator">STATE LIST ANIMATOR</string>
    <string name="constraint_set">constraint set</string>
    <string name="text_1">PICTURE\nLANDSCAPE</string>
    <string name="text_2">this picture shows the gradient of the sky, an excellent mountain landscape, and several ducks swimming on the lake</string>
    <string name="circular_animation_menu_button">circular animation button</string>
    <string name="trajectory_circle_move">trajectory circle move</string>
</resources>